--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Livereload React application",
   "author": "Matti Lankinen <m.lankinen@iki.fi> (https://github.com/milankinen)",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "browserify-transform-tools": "^1.3.3"
+  }
 }
