--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "browserify-transform-tools": "^1.3.3",
     "ramda": "^0.13.0",
+    "react": "^0.13.1",
+    "react-hot-api": "^0.4.3",
     "through2": "^0.6.3",
     "ws": "^0.7.1"
   }
