--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "reactloadify",
+  "name": "livereactload",
   "version": "0.0.1",
-  "description": "Livereload React application",
+  "description": "Browserify plugin for livereloaded React development",
   "author": "Matti Lankinen <m.lankinen@iki.fi> (https://github.com/milankinen)",
-  "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:milankinen/livereactload.git"
+  },
+  "keywords": ["react", "reload", "real-time", "browserify", "plugin", "development"],
+  "main": "index.js",
+  "scripts": {
+  },
   "dependencies": {
     "browserify-transform-tools": "^1.3.3",
     "ramda": "^0.13.0",
@@ -12,5 +19,6 @@
     "react-hot-api": "^0.4.3",
     "through2": "^0.6.3",
     "ws": "^0.7.1"
-  }
+  },
+  "devDependencies": {}
 }
