--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "development"
   ],
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "browserify-transform-tools": "^1.3.3",
-    "ramda": "^0.13.0",
-    "react": "^0.13.1",
+    "cli-color": "^0.3.3",
     "react-hot-api": "^0.4.3",
     "through2": "^0.6.3",
     "ws": "^0.7.1"
