--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
-    "browserify-transform-tools": "^1.3.3",
-    "cli-color": "^0.3.3",
-    "react-hot-api": "^0.4.3",
-    "through2": "^0.6.3",
-    "ws": "^0.7.1"
+    "browserify-transform-tools": "1.3.3",
+    "cli-color": "0.3.3",
+    "react-hot-api": "0.4.3",
+    "through2": "0.6.3",
+    "ws": "0.7.1"
   },
   "devDependencies": {}
 }
