--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "browserify-transform-tools": "1.3.3",
     "cli-color": "0.3.3",
+    "livereactload-api": "0.1.0",
     "react-hot-api": "0.4.3",
     "through2": "0.6.3",
     "ws": "0.7.1"
