--- a/examples/05-build-systems/package.json
+++ b/examples/05-build-systems/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "livereactload-example-basic",
+  "name": "livereactload-build-system-integration-example",
   "version": "0.0.1",
   "author": "Matti Lankinen <m.lankinen@iki.fi> (https://github.com/milankinen)",
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "./scripts/dev"
+    "dev": "node_modules/.bin/gulp watch"
   },
   "dependencies": {
     "express": "4.12.3",
@@ -15,6 +15,7 @@
     "babelify": "^5.0.4",
     "browserify": "9.0.3",
     "gulp": "^3.8.11",
+    "gulp-cli": "^0.2.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-util": "^3.0.4",
