--- a/examples/03-unsafe-html/package.json
+++ b/examples/03-unsafe-html/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "express": "4.12.3",
-    "livereactload-api": "file:../../../livereactload-api",
+    "livereactload-api": "0.2.0",
     "react": "0.13.1"
   },
   "devDependencies": {
     "browserify": "9.0.3",
-    "livereactload": "0.1.0",
+    "livereactload": "0.2.0",
     "nodemon": "1.3.7",
     "reactify": "1.1.0",
     "watchify": "2.6.2"
