--- a/examples/04-custom-state/package.json
+++ b/examples/04-custom-state/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "baconjs": "^0.7.53",
     "express": "4.12.3",
-    "livereactload-api": "file:../../../livereactload-api",
+    "livereactload-api": "0.2.0",
     "react": "0.13.1"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
     "browserify": "9.0.3",
-    "livereactload": "0.1.0",
+    "livereactload": "0.2.0",
     "nodemon": "1.3.7",
     "reactify": "1.1.0",
     "watchify": "2.6.2"
