--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "ws": "0.7.1"
   },
   "devDependencies": {
-    "babel": "^4.7.16",
-    "bluebird": "^2.9.21",
-    "debug": "^2.1.3",
-    "execSync": "^1.0.2",
-    "extend": "^2.0.0",
-    "fs-extra": "^0.18.0",
-    "mocha": "^2.2.1",
-    "webdriverio": "^2.4.5"
+    "babel": "4.7.16",
+    "bluebird": "2.9.21",
+    "debug": "2.1.3",
+    "execSync": "1.0.2",
+    "extend": "2.0.0",
+    "fs-extra": "0.18.0",
+    "mocha": "2.2.1",
+    "webdriverio": "2.4.5"
   }
 }
