Use latest version of livereactload in examples

--- a/examples/06-react-bootstrap/package.json
+++ b/examples/06-react-bootstrap/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "browserify": "9.0.3",
-    "livereactload": "file:../../",
+    "livereactload": "latest",
     "nodemon": "1.3.7",
     "reactify": "1.1.0",
     "watchify": "2.6.2"
