--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "browserify": "9.0.3",
-    "livereactload": "0.3.0",
+    "livereactload": "latest",
     "nodemon": "1.3.7",
     "reactify": "1.1.0",
     "watchify": "2.6.2"
