--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "mocha": "node_modules/.bin/mocha --timeout 120000 --compilers js:babel/register"
   },
   "dependencies": {
+    "chokidar": "1.0.1",
     "cli-color": "0.3.3",
     "livereactload-api": "0.4.0",
+    "node-notifier": "4.1.2",
     "react-hot-api": "0.4.3",
     "through2": "0.6.3",
-    "ws": "0.7.1"
+    "ws": "0.7.1",
+    "yargs": "3.7.1"
   },
   "devDependencies": {
     "babel": "4.7.16",
