--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livereactload",
-  "version": "0.4.0",
+  "version": "0.5.0-rc1",
   "description": "Live code editing with Browserify and React",
   "author": "Matti Lankinen <m.lankinen@iki.fi> (https://github.com/milankinen)",
   "license": "MIT",
