Use livereactload-api 0.5.0

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "chokidar": "1.0.1",
     "cli-color": "0.3.3",
-    "livereactload-api": "0.5.0-rc1",
+    "livereactload-api": "0.5.0",
     "node-notifier": "4.1.2",
     "react-hot-api": "0.4.3",
     "through2": "0.6.3",
