--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "chokidar": "1.0.1",
     "cli-color": "0.3.3",
+    "deep-extend": "0.4.0",
     "livereactload-api": "0.5.1",
     "node-notifier": "4.1.2",
     "react-hot-api": "0.4.3",
