--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "babel": "4.7.16",
     "bluebird": "2.9.21",
     "debug": "2.1.3",
-    "execSync": "1.0.2",
     "extend": "2.0.0",
     "fs-extra": "0.18.0",
     "mocha": "2.2.1",
+    "shelljs": "0.5.1",
     "webdriverio": "2.4.5"
   }
 }
