--- a/package.json
+++ b/package.json
@@ -21,26 +21,25 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run mocha -- test/*.js",
-    "mocha": "node_modules/.bin/mocha --timeout 120000 --compilers js:babel/register"
+    "mocha": "mocha --timeout 120000 --compilers js:babel/register"
   },
   "dependencies": {
-    "chokidar": "1.0.1",
-    "cli-color": "0.3.3",
+    "chokidar": "1.0.3",
+    "cli-color": "1.0.0",
     "deep-extend": "0.4.0",
     "livereactload-api": "0.5.1",
-    "node-notifier": "4.1.2",
-    "react-hot-api": "0.4.3",
-    "through2": "0.6.3",
-    "ws": "0.7.1",
-    "yargs": "3.7.1"
+    "node-notifier": "4.2.1",
+    "react-hot-api": "0.4.4",
+    "through2": "2.0.0",
+    "ws": "0.7.2",
+    "yargs": "3.11.0"
   },
   "devDependencies": {
-    "babel": "4.7.16",
-    "bluebird": "2.9.21",
-    "debug": "2.1.3",
-    "extend": "2.0.0",
-    "fs-extra": "0.18.0",
-    "mocha": "2.2.1",
+    "babel": "5.5.8",
+    "debug": "2.2.0",
+    "extend": "2.0.1",
+    "fs-extra": "0.19.0",
+    "mocha": "2.2.5",
     "shelljs": "0.5.1",
     "webdriverio": "2.4.5"
   }
