--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "deep-extend": "0.4.0",
     "livereactload-api": "0.5.1",
     "node-notifier": "4.2.1",
-    "react-hot-api": "0.4.4",
+    "react-hot-api": "0.5.0-alpha-3",
     "syntax-error": "1.1.4",
     "through2": "2.0.0",
     "ws": "0.7.2",
