--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -8,14 +8,16 @@
     "dev": "./scripts/dev"
   },
   "dependencies": {
-    "express": "4.12.3",
-    "react": "0.13.1"
+    "babel-plugin-react-transform": "^1.0.3",
+    "express": "4.13.3",
+    "react": "0.13.3"
   },
   "devDependencies": {
-    "browserify": "9.0.3",
-    "livereactload": "latest",
-    "nodemon": "1.3.7",
-    "reactify": "1.1.0",
-    "watchify": "2.6.2"
+    "babelify": "6.3.0",
+    "browserify": "11.0.1",
+    "livereactload": "file:../..",
+    "nodemon": "1.4.1",
+    "react-proxy": "^1.0.0",
+    "watchify": "3.4.0"
   }
 }
