Write new basic usage example

--- a/examples/01-basic-usage/.babelrc
+++ b/examples/01-basic-usage/.babelrc
@@ -6,8 +6,7 @@
   "extra": {
     "react-transform": [{
       "target": "livereactload/babel-transform",
-      "imports": ["react"],
-      "locals": ["module"]
+      "imports": ["react"]
     }]
   }
 }
