Polish basic example

--- a/examples/01-basic-usage/.babelrc
+++ b/examples/01-basic-usage/.babelrc
@@ -1,12 +1,15 @@
 {
-  "stage": 0,
-  "plugins": [
-    "react-transform"
-  ],
-  "extra": {
-    "react-transform": [{
-      "target": "livereactload/babel-transform",
-      "imports": ["react"]
-    }]
+  "env": {
+    "development": {
+      "plugins": [
+        "react-transform"
+      ],
+      "extra": {
+        "react-transform": [{
+          "target": "livereactload/babel-transform",
+          "imports": ["react"]
+        }]
+      }
+    }
   }
 }
