Add new test set by using tape and zombie

--- a/package.json
+++ b/package.json
@@ -18,23 +18,21 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "npm run dist",
-    "test": "npm run mocha -- test/*.js",
     "dist": "babel src --source-maps inline --blacklist strict src/requireOverride.js --out-dir lib",
-    "mocha": "mocha --timeout 120000 --compilers js:babel/register"
+    "test": "babel-tape-runner test/**/*Test.js ; EXIT_VALUE=$? ; killall node ; exit $EXIT_VALUE"
   },
   "dependencies": {
     "cli-color": "1.0.0",
-    "node-notifier": "4.2.3",
     "through2": "2.0.0",
     "ws": "0.8.0"
   },
   "devDependencies": {
     "babel": "5.8.23",
-    "debug": "2.2.0",
-    "extend": "3.0.0",
-    "fs-extra": "0.24.0",
-    "mocha": "2.3.2",
-    "shelljs": "0.5.3",
-    "webdriverio": "3.2.3"
+    "babel-tape-runner": "1.2.0",
+    "bluebird": "^2.10.1",
+    "chokidar": "^1.0.6",
+    "shelljs": "^0.5.3",
+    "tape": "4.2.0",
+    "zombie": "2.5.1"
   }
 }
