--- a/examples/03-build-systems/package.json
+++ b/examples/03-build-systems/package.json
@@ -22,7 +22,7 @@
     "gulp": "3.9.0",
     "gulp-nodemon": "2.0.4",
     "gulp-util": "3.0.6",
-    "livereactload": "file:../..",
+    "livereactload": "2.0.0-rc1",
     "nodemon": "1.5.1",
     "react-proxy": "1.0.0",
     "vinyl-buffer": "1.0.0",
