Update example dependencies

--- a/examples/01-basic-usage/.babelrc
+++ b/examples/01-basic-usage/.babelrc
@@ -5,10 +5,12 @@
         "react-transform"
       ],
       "extra": {
-        "react-transform": [{
-          "target": "livereactload/babel-transform",
-          "imports": ["react"]
-        }]
+        "react-transform": {
+          "transforms": [{
+            "transform": "livereactload/babel-transform",
+            "imports": ["react"]
+          }]
+        }
       }
     }
   }
