--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "babel-plugin-react-transform": "1.1.1",
-    "livereactload": "2.0.0-rc1",
+    "livereactload": "latest",
     "nodemon": "1.7.0",
     "react-proxy": "1.1.0",
     "watchify": "3.4.0"
