--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "npm run dist",
-    "dist": "babel src --source-maps inline --blacklist strict src/requireOverride.js --out-dir lib",
+    "dist": "npm run compile && npm run remove-maps",
+    "compile": "babel src --out-dir lib --blacklist strict src/requireOverride.js",
+    "remove-maps": "find lib -type f -name '*.map' -delete",
     "test": "babel-tape-runner test/**/*Test.js ; EXIT_VALUE=$? ; killall node ; exit $EXIT_VALUE"
   },
   "dependencies": {
