--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -11,8 +11,10 @@
     "watch:bundle": "watchify site.js -v -t babelify -g envify -p livereactload -o bundle.js"
   },
   "dependencies": {
-    "babel": "5.8.23",
-    "babelify": "6.3.0",
+    "babel-cli": "6.3.15",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babelify": "7.2.0",
     "browserify": "11.2.0",
     "envify": "3.4.0",
     "express": "4.13.3",
@@ -20,7 +22,7 @@
     "uglifyify": "3.0.1"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "1.1.1",
+    "babel-plugin-react-transform": "2.0.0-beta1",
     "livereactload": "latest",
     "nodemon": "1.7.0",
     "react-proxy": "1.1.0",
