--- a/examples/03-build-systems/package.json
+++ b/examples/03-build-systems/package.json
@@ -7,14 +7,16 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "babelify": "6.3.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babelify": "7.2.0",
     "browserify": "11.2.0",
     "envify": "3.4.0",
     "express": "4.13.3",
     "react": "0.13.3"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "1.1.1",
+    "babel-plugin-react-transform": "2.0.0-beta1",
     "grunt": "0.4.5",
     "grunt-browserify": "4.0.1",
     "grunt-concurrent": "2.0.3",
