--- a/examples/02-redux/.babelrc
+++ b/examples/02-redux/.babelrc
@@ -1,17 +1,15 @@
 {
+  "presets": ["es2015", "react"],
   "env": {
     "development": {
       "plugins": [
-        "react-transform"
-      ],
-      "extra": {
-        "react-transform": {
+        ["react-transform", {
           "transforms": [{
             "transform": "livereactload/babel-transform",
             "imports": ["react"]
           }]
-        }
-      }
+        }]
+      ]
     }
   }
 }
