--- a/examples/02-redux/package.json
+++ b/examples/02-redux/package.json
@@ -11,24 +11,25 @@
     "watch:bundle": "watchify site.js -v -t babelify -g envify -p livereactload -o bundle.js"
   },
   "dependencies": {
-    "babel-cli": "6.3.15",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babelify": "7.2.0",
-    "browserify": "11.2.0",
-    "envify": "3.4.0",
-    "express": "4.13.3",
-    "react": "0.13.3",
-    "react-redux": "3.0.0",
-    "redux": "3.0.0",
-    "redux-thunk": "1.0.0",
-    "uglifyify": "3.0.1"
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "envify": "^3.4.0",
+    "express": "^4.13.4",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.6",
+    "redux-thunk": "^1.0.3",
+    "uglifyify": "^3.0.1"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "2.0.0-beta1",
+    "babel-plugin-react-transform": "^2.0.0",
     "livereactload": "latest",
-    "nodemon": "1.7.0",
-    "react-proxy": "1.1.0",
-    "watchify": "3.4.0"
+    "nodemon": "^1.8.1",
+    "react-proxy": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
