--- a/examples/03-build-systems/package.json
+++ b/examples/03-build-systems/package.json
@@ -7,28 +7,29 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babelify": "7.2.0",
-    "browserify": "11.2.0",
-    "envify": "3.4.0",
-    "express": "4.13.3",
-    "react": "0.13.3"
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "envify": "^3.4.0",
+    "express": "^4.13.4",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "2.0.0-beta1",
-    "grunt": "0.4.5",
-    "grunt-browserify": "4.0.1",
-    "grunt-concurrent": "2.0.3",
-    "grunt-nodemon": "0.4.0",
-    "gulp": "3.9.0",
-    "gulp-nodemon": "2.0.4",
-    "gulp-util": "3.0.6",
+    "babel-plugin-react-transform": "^2.0.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-concurrent": "^2.1.0",
+    "grunt-nodemon": "^0.4.1",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-util": "^3.0.7",
     "livereactload": "latest",
-    "nodemon": "1.7.0",
-    "react-proxy": "1.1.0",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "watchify": "3.4.0"
+    "nodemon": "^1.8.1",
+    "react-proxy": "^1.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
