--- a/examples/04-babel-5.x/package.json
+++ b/examples/04-babel-5.x/package.json
@@ -11,19 +11,20 @@
     "watch:bundle": "watchify site.js -v -t babelify -g envify -p livereactload -o bundle.js"
   },
   "dependencies": {
-    "babel": "5.8.23",
-    "babelify": "6.4.0",
-    "browserify": "11.2.0",
-    "envify": "3.4.0",
-    "express": "4.13.3",
-    "react": "^0.13.3",
-    "uglifyify": "3.0.1"
+    "babel": "^5.8.29",
+    "babelify": "^6.4.0",
+    "browserify": "^13.0.0",
+    "envify": "^3.4.0",
+    "express": "^4.13.4",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "uglifyify": "^3.0.1"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "1.1.1",
+    "babel-plugin-react-transform": "^1.1.0",
     "livereactload": "latest",
-    "nodemon": "1.7.0",
-    "react-proxy": "1.1.0",
-    "watchify": "3.4.0"
+    "nodemon": "^1.8.1",
+    "react-proxy": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
