--- a/package.json
+++ b/package.json
@@ -19,24 +19,28 @@
   "scripts": {
     "prepublish": "npm run dist",
     "dist": "npm run compile && npm run remove-maps",
+    "precompile": "rm -rf lib/*",
     "compile": "babel src --out-dir lib",
+    "postcompile": "cp src/reloading.js lib/",
     "remove-maps": "find lib -type f -name '*.map' -delete",
+    "pretest": "npm run compile",
     "test": "babel-tape-runner test/**/*Test.js ; EXIT_VALUE=$? ; killall node ; exit $EXIT_VALUE"
   },
   "dependencies": {
     "cli-color": "1.1.0",
-    "ws": "1.1.0",
+    "ws": "1.1.1",
     "lodash": "4.13.1",
     "md5": "2.1.0",
     "through2": "2.0.1"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
-    "babel-tape-runner": "1.2.0",
-    "bluebird": "3.1.5",
-    "chokidar": "1.4.2",
-    "shelljs": "0.5.3",
-    "tape": "4.4.0",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-tape-runner": "2.0.1",
+    "bluebird": "3.4.1",
+    "chokidar": "1.6.0",
+    "shelljs": "0.7.0",
+    "tape": "4.6.0",
     "zombie": "4.2.1"
   }
 }
