--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -11,22 +11,22 @@
     "watch:bundle": "watchify site.js -v -t babelify -g envify -p livereactload -o bundle.js"
   },
   "dependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "envify": "^3.4.0",
-    "express": "^4.13.4",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "uglifyify": "^3.0.1"
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "envify": "^3.4.1",
+    "express": "^4.14.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "uglifyify": "^3.0.2"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "^2.0.0",
-    "livereactload": "latest",
-    "nodemon": "^1.8.1",
-    "react-proxy": "^1.1.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "livereactload": "file:../..",
+    "nodemon": "^1.9.2",
+    "react-proxy": "^1.1.8",
     "watchify": "^3.7.0"
   }
 }
