Add support for livereloadable standalone bundles

--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "dependencies": {
     "cli-color": "1.1.0",
-    "ws": "1.1.1",
     "lodash": "4.13.1",
     "md5": "2.1.0",
-    "through2": "2.0.1"
+    "through2": "2.0.1",
+    "umd": "3.0.1",
+    "ws": "1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
