--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "cli-color": "1.1.0",
+    "convert-source-map": "1.3.0",
     "lodash": "4.13.1",
     "md5": "2.1.0",
+    "offset-sourcemap-lines": "1.0.0",
     "through2": "2.0.1",
     "umd": "3.0.1",
     "ws": "1.1.1"
