--- a/examples/02-redux/package.json
+++ b/examples/02-redux/package.json
@@ -1,35 +1,136 @@
 {
-  "name": "livereactload-flux-with-redux-example",
-  "version": "2.0.0",
-  "author": "Matti Lankinen <m.lankinen@iki.fi> (https://github.com/milankinen)",
+  "name": "02-redux",
+  "version": "1.0.0",
+  "description": "redux example for livereload",
+  "author": "Gregor Adams <greg@pixelass.com>",
+  "keywords": [
+    "react",
+    "redux",
+    "react-redux",
+    "boilerplate"
+  ],
   "license": "MIT",
+  "devPort": 3000,
+  "main": "scripts/server.js",
   "scripts": {
-    "start": "babel-node server.js",
-    "bundle:prod": "browserify site.js -t babelify -g envify -o bundle.js",
-    "watch": "npm run watch:server & npm run watch:bundle & wait",
-    "watch:server": "nodemon --exec babel-node --ignore bundle.js -- server.js",
-    "watch:bundle": "watchify site.js -v -t babelify -g envify -p livereactload -o bundle.js"
+    "build": "NODE_ENV=production node ./scripts/build",
+    "browser-sync": "browser-sync start -s 'public' -f 'public/main.css'",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "report": "nyc report --reporter=html",
+    "lint": "npm run eslint",
+    "eslint": "xo {scripts,site,src}/**/*.js",
+    "posttest": "npm run lint",
+    "server": "node ./scripts/server",
+    "dev": "node ./scripts/dev",
+    "start": "npm run build && npm run server",
+    "test": "nyc ava",
+    "watch": "node ./scripts/watch"
   },
   "dependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "envify": "^3.4.1",
-    "express": "^4.14.0",
-    "react": "15.2.1",
-    "react-dom": "15.2.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "uglifyify": "^3.0.2"
+    "react": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
+  "peerDependencies": {},
   "devDependencies": {
+    "ava": "^0.18.2",
+    "babel-cli": "^6.23.0",
     "babel-plugin-react-transform": "^2.0.2",
-    "livereactload": "latest",
-    "nodemon": "^1.9.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
+    "coveralls": "^2.11.16",
+    "errorify": "^0.3.1",
+    "eslint": "^3.17.0",
+    "eslint-config-xo-react": "^0.10.0",
+    "eslint-plugin-react": "^6.10.0",
+    "fbjs": "^0.8.9",
+    "http-server": "^0.9.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.11.0",
+    "livereactload": "^3.2.0",
+    "log": "^1.4.0",
+    "nyc": "^10.1.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-proxy": "^1.1.8",
-    "watchify": "^3.7.0"
+    "react-test-renderer": "^15.4.2",
+    "sinon": "^1.17.7",
+    "uglifyify": "^3.0.4",
+    "watchify": "^3.9.0",
+    "xo": "^0.17.1"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "react"
+    ],
+    "env": {
+      "development": {
+        "sourceMaps": "inline",
+        "plugins": [
+          [
+            "react-transform",
+            {
+              "transforms": [
+                {
+                  "transform": "livereactload/babel-transform",
+                  "imports": [
+                    "react"
+                  ]
+                }
+              ]
+            }
+          ]
+        ]
+      }
+    }
+  },
+  "xo": {
+    "space": true,
+    "semicolon": true,
+    "extends": [
+      "xo-react"
+    ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "indentation": 2,
+      "number-leading-zero": null
+    }
+  },
+  "ava": {
+    "files": [
+      "src/**/spec/*.js"
+    ],
+    "source": [
+      "src/**/*.js"
+    ],
+    "presets": [
+      "@ava/stage-4",
+      "@ava/transform-test-files"
+    ],
+    "failFast": true,
+    "tap": false,
+    "require": [
+      "babel-register",
+      "ignore-styles"
+    ],
+    "babel": "inherit"
+  },
+  "nyc": {
+    "exclude": [
+      "src/store/**/*.js"
+    ]
   }
 }
