--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   "dependencies": {
     "cli-color": "1.1.0",
     "convert-source-map": "1.3.0",
+    "crc": "3.4.4",
+    "left-pad": "1.1.3",
     "lodash": "4.17.4",
-    "md5": "2.2.1",
     "offset-sourcemap-lines": "1.0.0",
     "through2": "2.0.3",
     "umd": "3.0.1",
