--- a/examples/02-redux/package.json
+++ b/examples/02-redux/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "ava": "^0.18.2",
     "babel-cli": "^6.23.0",
-    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
@@ -51,12 +50,12 @@
     "http-server": "^0.9.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^9.11.0",
-    "livereactload": "^3.2.0",
+    "livereactload": "latest",
     "log": "^1.4.0",
     "nyc": "^10.1.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-proxy": "^1.1.8",
+    "react-hot-loader": "next",
     "react-test-renderer": "^15.4.2",
     "sinon": "^1.17.7",
     "uglifyify": "^3.0.4",
@@ -74,26 +73,7 @@
       "stage-0",
       "react"
     ],
-    "env": {
-      "development": {
-        "sourceMaps": "inline",
-        "plugins": [
-          [
-            "react-transform",
-            {
-              "transforms": [
-                {
-                  "transform": "livereactload/babel-transform",
-                  "imports": [
-                    "react"
-                  ]
-                }
-              ]
-            }
-          ]
-        ]
-      }
-    }
+    "plugins": "react-hot-loader/babel"
   },
   "xo": {
     "space": true,
