Update and fix examples to use beta package

--- a/examples/01-basic-usage/package.json
+++ b/examples/01-basic-usage/package.json
@@ -23,7 +23,7 @@
     "uglifyify": "^3.0.2"
   },
   "devDependencies": {
-    "livereactload": "latest",
+    "livereactload": "next",
     "nodemon": "^1.9.2",
     "react-hot-loader": "next",
     "watchify": "^3.7.0"
