--- a/examples/02-redux/package.json
+++ b/examples/02-redux/package.json
@@ -50,7 +50,7 @@
     "http-server": "^0.9.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^9.11.0",
-    "livereactload": "latest",
+    "livereactload": "next",
     "log": "^1.4.0",
     "nyc": "^10.1.2",
     "react-addons-test-utils": "^15.4.2",
