--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "4"
-  - "5"
-  - "6"
+  - "10"
+  - "11"
 before_script:
   - npm install -g npm
 script:
+  - cd test/app && npm i && cd ../..
   - npm test
